--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>Home - Techblog</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="robots" content="index, follow" />
     <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <!-- Google tag (gtag.js) -->
